# HW-Puzzak-Dialogs-PY

./: .gitignore  .project  EVENTS.md  OUTPUT.md  QUEST_TMP.md  README.md  STARMAP.md  STRINGS.md  conftest.py  constants.py  pyproject.toml  pytest.ini  utils.py
constructors/: chapter_constructor.py  constructor_base.py  constuctor_base.py  dia_seq_constructor.py  event_constructor.py  glossary_constructor.py  hints_constructor.py  mission_constructor.py  mission_step_actions_constructor.py  mission_step_constructor.py  names_constructor.py  officer_constructor.py  quest_constructor.py  quest_line_constructor.py  star_map_constructor.py  string_constructor.py
data/: ALL_CHAPTER_SCENARIO.md  ALL_EVENT_SCENARIO.md  CHAPTERS.md  CHAPTER_STRINGS.md  DIALOGS.md  DIALOGS_SEQ.md  DIALOGS_STRINGS.md  EVENTS.md  HINTS.md  HINT_STRINGS.md  MISSIONS.md  MISSIONS_STACT.md  MISSIONS_STEPS.md  MISSIONS_STEPS_TMP.md  MISSIONS_TMP.md  MISSION_STACT.md  MISSION_STACT_TMP.md  NAMES.md  OFFICERS.md  QUESTS.md  QUESTSLINES.md  QUEST_LINE_QUESTS.md  QUEST_LINE_QUESTS_TMP.md  QUEST_TMP.md  STARMAP.md  STRINGS.md  STRINGS_GLOSSARY.MD  STRINGS_JSON.md
data_final/: ALL_CHAPTER_SCENARIO.md  ALL_EVENT_SCENARIO.md
json/: chapter_strings.json  chapters.json  constellations.json  dialog_seq.json  dialogs.json  events.json  hint_strings.json  hints.json  mission_dialogs_rearranged.json  mission_stact.json  missions.json  officers.json  quest_line_quests.json  quest_lines.json  questlines.json  quests.json  starmap.json
json_bak/: BlueprintData-module.json  ColorData-module.json  (+44 more)
src/: utils.py
(+104 files in other folders)
